Fix text on creating symbolic link

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["commandline", "defterm", "Mintty", "MSYS", "pacman"]
+  "cSpell.words": [
+    "commandline",
+    "defterm",
+    "Mintty",
+    "mklink",
+    "MSYS",
+    "pacman"
+]
 }
