--- a/code/linked_nodes/.vscode/launch.json
+++ b/code/linked_nodes/.vscode/launch.json
@@ -1,29 +1,29 @@
 {
-    "version": "0.2.0",
-    "configurations": [
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "GDB: build and launch C project",
+      "type": "cppdbg",
+      "request": "launch",
+      "preLaunchTask": "Clang: build C project",
+      "program": "${workspaceFolder}/${workspaceFolderBasename}.exe",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "${workspaceFolder}",
+      "environment": [],
+      "externalConsole": true,
+      "MIMode": "gdb",
+      "miDebuggerPath": "C:\\msys64\\clang64\\bin\\gdb.exe",
+      "setupCommands": [
         {
-            "name": "GDB: build and launch",
-            "type": "cppdbg",
-            "request": "launch",
-            "preLaunchTask": "Clang: build",
-            "program": "${workspaceFolder}/${workspaceFolderBasename}.exe",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
-            "environment": [],
-            "externalConsole": true,
-            "MIMode": "gdb",
-            "miDebuggerPath": "C:\\msys64\\clang64\\bin\\gdb.exe",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                }
-            ],
-            "logging": {
-                "engineLogging": true
-            }
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
         }
-    ]
+      ],
+      "logging": {
+        "engineLogging": true
+      }
+    }
+  ]
 }
