--- a/config/debug_settings.json
+++ b/config/debug_settings.json
@@ -1,11 +1,4 @@
 {
-  "C_Cpp.debuggers": [
-    {
-      "name": "LLDB",
-      "path": "C:\\msys64\\clang64\\bin\\lldb.exe",
-      "type": "cppdbg"
-    }
-  ],
   "C_Cpp.default.cStandard": "c23",
   "C_Cpp.default.compilerPath": "C:\\msys64\\clang64\\bin\\clang.exe",
   "C_Cpp.default.cppStandard": "c++23",
@@ -27,8 +20,8 @@
         },
         "miDebuggerPath": "C:\\msys64\\clang64\\bin\\gdb.exe",
         "MIMode": "gdb",
-        "name": "GDB: build and launch",
-        "preLaunchTask": "Clang: build",
+        "name": "GDB: build and launch C project",
+        "preLaunchTask": "Clang: build C project",
         "program": "${workspaceFolder}/${workspaceFolderBasename}.exe",
         "request": "launch",
         "setupCommands": [
