Write about compiling and debugging a C++ project in VsCode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
   "cSpell.words": [
     "commandline",
+    "cout",
     "defterm",
+    "endl",
+    "iostream",
     "linkar",
     "Mintty",
     "mklink",
     "MSYS",
     "pacman"
-]
+  ]
 }
