--- a/code/linked_nodes/.vscode/tasks.json
+++ b/code/linked_nodes/.vscode/tasks.json
@@ -2,7 +2,7 @@
   "tasks": [
     {
       "type": "cppbuild",
-      "label": "Clang: build C project",
+      "label": "Clang: build C project (all files in root)",
       "command": "C:\\msys64\\clang64\\bin\\clang.exe",
       "args": [
         "-fcolor-diagnostics",
