--- a/config/cpp_settings.json
+++ b/config/cpp_settings.json
@@ -20,8 +20,8 @@
         },
         "miDebuggerPath": "C:\\msys64\\clang64\\bin\\gdb.exe",
         "MIMode": "gdb",
-        "name": "GDB: build and launch C project",
-        "preLaunchTask": "Clang: build C project",
+        "name": "GDB: build and launch C project (all files in root)",
+        "preLaunchTask": "Clang: build C project (all files in root)",
         "program": "${workspaceFolder}/${workspaceFolderBasename}.exe",
         "request": "launch",
         "setupCommands": [
@@ -44,8 +44,8 @@
         },
         "miDebuggerPath": "C:\\msys64\\clang64\\bin\\gdb.exe",
         "MIMode": "gdb",
-        "name": "GDB: build and launch C++ project",
-        "preLaunchTask": "Clang: build C++ project",
+        "name": "GDB: build and launch C++ project (all files in root)",
+        "preLaunchTask": "Clang: build C++ project (all files in root)",
         "program": "${workspaceFolder}/${workspaceFolderBasename}.exe",
         "request": "launch",
         "setupCommands": [
