--- a/config/cmake_settings.json
+++ b/config/cmake_settings.json
@@ -7,7 +7,26 @@
     "C:/msys64/clang64/include"
   ],
   "C_Cpp.default.intelliSenseMode": "clang-x64",
-  "C_Cpp.loggingLevel": "Debug",
+  "cmake.debugConfig": {
+    "MIMode": "gdb",
+    "console": "newExternalWindow",
+    "cwd": "${workspaceFolder}",
+    "externalConsole": true,
+    "logging": {
+      "engineLogging": true
+    },
+    "miDebuggerPath": "C:\\msys64\\clang64\\bin\\gdb.exe",
+    "program": "${workspaceFolder}\\build\\${workspaceFolderBasename}.exe",
+    "setupCommands": [
+      {
+        "description": "Enable pretty-printing for gdb",
+        "ignoreFailures": true,
+        "text": "-enable-pretty-printing"
+      }
+    ],
+    "stopAtEntry": false,
+    "type": "cppdbg"
+  },
   "launch": {
     "configurations": [
       {
@@ -20,8 +39,8 @@
         },
         "miDebuggerPath": "C:\\msys64\\clang64\\bin\\gdb.exe",
         "MIMode": "gdb",
-        "name": "GDB: build and launch C project (all files in root)",
-        "preLaunchTask": "Clang: build C project (all files in root)",
+        "name": "GDB: build and launch C project",
+        "preLaunchTask": "Clang: build C project",
         "program": "${workspaceFolder}/${workspaceFolderBasename}.exe",
         "request": "launch",
         "setupCommands": [
@@ -44,9 +63,32 @@
         },
         "miDebuggerPath": "C:\\msys64\\clang64\\bin\\gdb.exe",
         "MIMode": "gdb",
-        "name": "GDB: build and launch C++ project (all files in root)",
-        "preLaunchTask": "Clang: build C++ project (all files in root)",
+        "name": "GDB: build and launch C++ project",
+        "preLaunchTask": "Clang: build C++ project",
         "program": "${workspaceFolder}/${workspaceFolderBasename}.exe",
+        "request": "launch",
+        "setupCommands": [
+          {
+            "description": "Enable pretty-printing for gdb",
+            "ignoreFailures": true,
+            "text": "-enable-pretty-printing"
+          }
+        ],
+        "stopAtEntry": false,
+        "type": "cppdbg"
+      },
+      {
+        "args": [],
+        "cwd": "${workspaceFolder}",
+        "environment": [],
+        "externalConsole": true,
+        "logging": {
+          "engineLogging": true
+        },
+        "miDebuggerPath": "C:\\msys64\\clang64\\bin\\gdb.exe",
+        "MIMode": "gdb",
+        "name": "GDB: launch C++ project",
+        "program": "${workspaceFolder}/build/${workspaceFolderBasename}.exe",
         "request": "launch",
         "setupCommands": [
           {
