--- a/config/cmake_settings.json
+++ b/config/cmake_settings.json
@@ -19,6 +19,11 @@
     "program": "${workspaceFolder}\\build\\${workspaceFolderBasename}.exe",
     "setupCommands": [
       {
+        "description": "Source the .gdbinit file",
+        "ignoreFailures": true,
+        "text": "source C:/msys64/home/${env:USERNAME}/.gdbinit"
+      },
+      {
         "description": "Enable pretty-printing for gdb",
         "ignoreFailures": true,
         "text": "-enable-pretty-printing"
@@ -45,6 +50,11 @@
         "request": "launch",
         "setupCommands": [
           {
+            "description": "Source the .gdbinit file",
+            "ignoreFailures": true,
+            "text": "source C:/msys64/home/${env:USERNAME}/.gdbinit"
+          },
+          {
             "description": "Enable pretty-printing for gdb",
             "ignoreFailures": true,
             "text": "-enable-pretty-printing"
@@ -69,6 +79,11 @@
         "request": "launch",
         "setupCommands": [
           {
+            "description": "Source the .gdbinit file",
+            "ignoreFailures": true,
+            "text": "source C:/msys64/home/${env:USERNAME}/.gdbinit"
+          },
+          {
             "description": "Enable pretty-printing for gdb",
             "ignoreFailures": true,
             "text": "-enable-pretty-printing"
@@ -91,6 +106,11 @@
         "program": "${workspaceFolder}/build/${workspaceFolderBasename}.exe",
         "request": "launch",
         "setupCommands": [
+          {
+            "description": "Source the .gdbinit file",
+            "ignoreFailures": true,
+            "text": "source C:/msys64/home/${env:USERNAME}/.gdbinit"
+          },
           {
             "description": "Enable pretty-printing for gdb",
             "ignoreFailures": true,
