--- a/code/linked_nodes/.vscode/launch.json
+++ b/code/linked_nodes/.vscode/launch.json
@@ -16,6 +16,11 @@
       "miDebuggerPath": "C:\\msys64\\clang64\\bin\\gdb.exe",
       "setupCommands": [
         {
+          "description": "Source the .gdbinit file",
+          "ignoreFailures": true,
+          "text": "source C:/msys64/home/${env:USERNAME}/.gdbinit"
+        },
+        {
           "description": "Enable pretty-printing for gdb",
           "text": "-enable-pretty-printing",
           "ignoreFailures": true
