--- a/config/cpp_settings.json
+++ b/config/cpp_settings.json
@@ -26,6 +26,11 @@
         "request": "launch",
         "setupCommands": [
           {
+            "description": "Source the .gdbinit file",
+            "ignoreFailures": true,
+            "text": "source C:/msys64/home/${env:USERNAME}/.gdbinit"
+          },
+          {
             "description": "Enable pretty-printing for gdb",
             "ignoreFailures": true,
             "text": "-enable-pretty-printing"
@@ -49,6 +54,11 @@
         "program": "${workspaceFolder}/${workspaceFolderBasename}.exe",
         "request": "launch",
         "setupCommands": [
+          {
+            "description": "Source the .gdbinit file",
+            "ignoreFailures": true,
+            "text": "source C:/msys64/home/${env:USERNAME}/.gdbinit"
+          },
           {
             "description": "Enable pretty-printing for gdb",
             "ignoreFailures": true,
