--- a/config/cmake_settings.json
+++ b/config/cmake_settings.json
@@ -1,144 +1,68 @@
 {
-  "C_Cpp.default.cStandard": "c23",
-  "C_Cpp.default.compilerPath": "C:\\msys64\\clang64\\bin\\clang.exe",
-  "C_Cpp.default.cppStandard": "c++23",
-  "C_Cpp.default.includePath": [
-    "${workspaceFolder}/**",
-    "C:/msys64/clang64/include"
-  ],
-  "C_Cpp.default.intelliSenseMode": "clang-x64",
-  "cmake.debugConfig": {
-    "MIMode": "gdb",
-    "console": "newExternalWindow",
-    "cwd": "${workspaceFolder}",
-    "externalConsole": true,
-    "logging": {
-      "engineLogging": true
+    "C_Cpp.default.cStandard": "c23",
+    "C_Cpp.default.compilerPath": "C:\\msys64\\clang64\\bin\\clang.exe",
+    "C_Cpp.default.cppStandard": "c++23",
+    "C_Cpp.default.includePath": [
+        "${workspaceFolder}/**",
+        "C:/msys64/clang64/include"
+    ],
+    "C_Cpp.default.intelliSenseMode": "clang-x64",
+    "cmake.debugConfig": {
+        "cwd": "${workspaceFolder}",
+        "program": "${workspaceFolder}\\build\\${workspaceFolderBasename}.exe",
+        "terminal": "console",
+        "type": "lldb"
     },
-    "miDebuggerPath": "C:\\msys64\\clang64\\bin\\gdb.exe",
-    "program": "${workspaceFolder}\\build\\${workspaceFolderBasename}.exe",
-    "setupCommands": [
-      {
-        "description": "Source the .gdbinit file",
-        "ignoreFailures": true,
-        "text": "source C:/msys64/home/${env:USERNAME}/.gdbinit"
-      },
-      {
-        "description": "Enable pretty-printing for gdb",
-        "ignoreFailures": true,
-        "text": "-enable-pretty-printing"
-      }
-    ],
-    "stopAtEntry": false,
-    "type": "cppdbg"
-  },
-  "launch": {
-    "configurations": [
-      {
-        "args": [],
-        "cwd": "${workspaceFolder}",
-        "environment": [],
-        "externalConsole": true,
-        "logging": {
-          "engineLogging": true
-        },
-        "miDebuggerPath": "C:\\msys64\\clang64\\bin\\gdb.exe",
-        "MIMode": "gdb",
-        "name": "GDB: build and launch C project",
-        "preLaunchTask": "Clang: build C project",
-        "program": "${workspaceFolder}/${workspaceFolderBasename}.exe",
-        "request": "launch",
-        "setupCommands": [
-          {
-            "description": "Source the .gdbinit file",
-            "ignoreFailures": true,
-            "text": "source C:/msys64/home/${env:USERNAME}/.gdbinit"
-          },
-          {
-            "description": "Enable pretty-printing for gdb",
-            "ignoreFailures": true,
-            "text": "-enable-pretty-printing"
-          }
+    "launch": {
+        "configurations": [
+            {
+                "args": [],
+                "cwd": "${workspaceFolder}",
+                "name": "LLDB: build and launch C project (all files in root)",
+                "preLaunchTask": "Clang: build C project (all files in root)",
+                "program": "${workspaceFolder}/${workspaceFolderBasename}.exe",
+                "request": "launch",
+                "terminal": "console",
+                "type": "lldb"
+            },
+            {
+                "args": [],
+                "cwd": "${workspaceFolder}",
+                "name": "LLDB: build and launch C++ project (all files in root)",
+                "preLaunchTask": "Clang: build C++ project (all files in root)",
+                "program": "${workspaceFolder}/${workspaceFolderBasename}.exe",
+                "request": "launch",
+                "terminal": "console",
+                "type": "lldb"
+            },
+            {
+                "args": [],
+                "cwd": "${workspaceFolder}",
+                "name": "LLDB: launch C++ project",
+                "program": "${workspaceFolder}/build/${workspaceFolderBasename}.exe",
+                "request": "launch",
+                "terminal": "console",
+                "type": "lldb"
+            }
         ],
-        "stopAtEntry": false,
-        "type": "cppdbg"
-      },
-      {
-        "args": [],
-        "cwd": "${workspaceFolder}",
-        "environment": [],
-        "externalConsole": true,
-        "logging": {
-          "engineLogging": true
-        },
-        "miDebuggerPath": "C:\\msys64\\clang64\\bin\\gdb.exe",
-        "MIMode": "gdb",
-        "name": "GDB: build and launch C++ project",
-        "preLaunchTask": "Clang: build C++ project",
-        "program": "${workspaceFolder}/${workspaceFolderBasename}.exe",
-        "request": "launch",
-        "setupCommands": [
-          {
-            "description": "Source the .gdbinit file",
-            "ignoreFailures": true,
-            "text": "source C:/msys64/home/${env:USERNAME}/.gdbinit"
-          },
-          {
-            "description": "Enable pretty-printing for gdb",
-            "ignoreFailures": true,
-            "text": "-enable-pretty-printing"
-          }
-        ],
-        "stopAtEntry": false,
-        "type": "cppdbg"
-      },
-      {
-        "args": [],
-        "cwd": "${workspaceFolder}",
-        "environment": [],
-        "externalConsole": true,
-        "logging": {
-          "engineLogging": true
-        },
-        "miDebuggerPath": "C:\\msys64\\clang64\\bin\\gdb.exe",
-        "MIMode": "gdb",
-        "name": "GDB: launch C++ project",
-        "program": "${workspaceFolder}/build/${workspaceFolderBasename}.exe",
-        "request": "launch",
-        "setupCommands": [
-          {
-            "description": "Source the .gdbinit file",
-            "ignoreFailures": true,
-            "text": "source C:/msys64/home/${env:USERNAME}/.gdbinit"
-          },
-          {
-            "description": "Enable pretty-printing for gdb",
-            "ignoreFailures": true,
-            "text": "-enable-pretty-printing"
-          }
-        ],
-        "stopAtEntry": false,
-        "type": "cppdbg"
-      }
-    ],
-    "version": "0.2.0"
-  },
-  "terminal.integrated.defaultProfile.windows": "MSYS2 CLANG64",
-  "terminal.integrated.profiles.windows": {
-    "MSYS2 CLANG64": {
-      "args": [
-        "-defterm",
-        "-here",
-        "-no-start",
-        "-clang64",
-        "-shell",
-        "zsh",
-        "--login",
-        "-i"
-      ],
-      "icon": "terminal-bash",
-      "name": "MSYS2 CLANG64",
-      "path": "C:\\msys64\\msys2_shell.cmd"
+        "version": "0.2.0"
+    },
+    "terminal.integrated.defaultProfile.windows": "MSYS2 CLANG64",
+    "terminal.integrated.profiles.windows": {
+        "MSYS2 CLANG64": {
+            "args": [
+                "-defterm",
+                "-here",
+                "-no-start",
+                "-clang64",
+                "-shell",
+                "zsh",
+                "--login",
+                "-i"
+            ],
+            "icon": "terminal-bash",
+            "name": "MSYS2 CLANG64",
+            "path": "C:\\msys64\\msys2_shell.cmd"
+        }
     }
-  }
 }
